--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,7 +2,8 @@ header {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    background-color: rgba(0, 0, 10, 0.1);
+    background-color: #f0f0f0;
+    //background-color: rgba(0, 0, 10, 0.1);
     justify-content: space-between;
     //border-radius: 20px;
     padding: 10px;
