--- a/src/index.njk
+++ b/src/index.njk
@@ -17,8 +17,9 @@
     {% include "./componentes/es/main.njk" %}
     {% include "./componentes/es/footer.njk" %}
 
+  <div class="info2">
     <div class="thiscv">
-      <small>Para la creación de este resumen he usado:<br> HTML5 & SASS y nunjucks como template engine.
+      <small>Para la creación de este resumen he usado HTML5 & SASS.
       <spam><br>
       Puedes verlo online:
 
@@ -29,9 +30,9 @@
       </spam>
       </small>
     </div>
-
-
   </div>
+
+  </div> <!-- box container -->
 
 {% endblock %}
 
