--- a/src/componentes/es/main.njk
+++ b/src/componentes/es/main.njk
@@ -16,24 +16,31 @@
                         <p class="fecha">2008 - noviembre 2017</p>
                         <p class="lugar">Valladolid, España</p>
                     </div>
-                    <p class="puesto">MAQUETADOR - ALCAÑIZ FRESNO’S</p>
+                    <p class="puesto">Maquetador - ALCAÑIZ FRESNO’S</p>
                     
                     <div>
                         <p>Alcañiz Fresno's es una empresa dedicada a las artes graficas, hace la vez de editorial como de imprenta.</p>
-                        <p>Mi función era la de maquetador, especializado en la creación de boletines oficiales y en su edicion electronica. He trabajado en los boletines oficiales del Senado, Cortes de Castilla y León, Junta de Castilla y León entre otros.<p>
+
+                        <p>Mi puesto era el de maquetador especializado en la creación de boletines oficiales y en su edición electronica. He trabajado en los boletines oficiales del Senado, Cortes de Castilla y León, Junta de Castilla y León entre otros.<p>
 
 
+                        <p>Entre mis funciones estaban las de coordinador del equipo de trabajo con dotes para la resolución de problemas; 
+                        Soporte técnico físico; Diseñador de plantillas y estilos; Tester de las aplicaciones personalizadas.</p>
 
-                        {# <p>Entre mis funciones estaban las de
-                         Coordinador del equipo de trabajo con dotes para la resolución de problemas. 
-                         Encargado del montaje de equipos, instalación de sofware y a la creación de maquetas y estilos necesarios.</p> #}
 
-                        <p>Entre mis funciones estaban las de:
-                        Coordinador del equipo de trabajo con dotes para la resolución de problemas. 
-                        Soporte técnico físico. Creador de plantillas y tester de las aplicaciones personalizadas</p>
-                        <p>Mi mayor aportación a sido la creación de scripts para <strong>inDesign</strong> a través de <strong>JavaScript</strong> que permiten ahorrar muchas horas de trabajo.</p>
+<!--
+                         <p>Entre mis funciones estaban las de:</p>
 
-                    
+                        <ul>
+                          <li> Coordinador del equipo de trabajo con dotes para la resolución de problemas. </li>
+                          <li>Soporte técnico físico.</li>
+                          <li>Creador de plantillas</li>
+                          <li>Tester de las aplicaciones personalizadas</li>
+                        </ul>
+-->      
+                        <p>Mi mayor aportación a sido la creación de scripts para <strong>inDesign</strong> a través de <strong>JavaScript</strong> para la automatización del trabajo.</p>
+
+              
                     </div>
                 </div>
             </article>
@@ -52,7 +59,7 @@
                     <div>
                         <p>Friul Intagli Industries S.p.A. es la mayor productora de muebles del mundo, su principal cliente es IKEA.</p>
 
-                        <p>Mi labor consistia en la gestión de una máquina ensambladora de puertas de armarios, la carga de material y el control de calidad del producto, para lo cual debía trabajar con gran rapidez y eficacia.</p>
+                        <p>Mi labor consistia en la gestión de una máquina ensambladora de puertas de armarios, la carga de material y el control de calidad del producto.</p>
 
                         <p>Este trabajo me ha permitido desarrollar mis habilidades de trabajo en equipo con personas de diferentes nacionalidades usando el italiano como lengua común.</p>
 
@@ -60,24 +67,9 @@
                 </div>
                 </article>
             
-{#            <article class="job">
-                <div class="logo">
-                    <img  src="{{ prefijo }}/img/logo_pinna.png">
-                </div>
+{#           lo cual exigia trabajar con gran rapidez y eficacia.
 
-                <div class="texto">
-                    <!-- <h3 class="empresa">A.S.D. Pinna-Sub San Vito</h3> -->
-                    <div class="info">
-                        <p class="fecha">Settembre 2019 - att.</p>
-                        <p class="lugar">San Vito al Tagliamento, Italia</p>
-                    </div>
-                    <p class="puesto">Maestro di nuoto - A.S.D. Pinna-Sub San Vito <spam class="tag2">Volontario</spam></p>
-                
-                    <p>Allenatore di nuoto con utenti di età e capacità diverse, che mi permette di continuare a migliorare le mie competenze comunicative. </p>
-                     <p>anche colavoro ocasionalmente con la creazione di volantini</p>
-                </div>
-            </article>
-
+      
             #}
         </section> <!-- fin experiencia -->
         
@@ -87,11 +79,12 @@
         <section class="personal section">
                 <h2 class="titulo-grande">Sobre mi</h2>
                 <div class="texto">
-                    <p>Hola, me llamo Andrés, soy un joven español con diez años de esperiencia en el sector de las artes graficas. Me considero una persona eficiente y atenta los detalles.</p>
+                    <p>Hola!, me llamo Andrés, soy un joven español con diez años de experiencia en el sector de las artes graficas. </p>
+
+                    <p>Actualmente estoy estudiando un grado superior desarrollo de aplicaciones Web, busco adquirir experiencia laboral
+                      en el sector del desarollo web que me permita seguir aprendiendo y poner en pratica mis conocimientos.</p>
                     
-                    <p>Quisiera crecer profesionalmente en el sector del diseño gratico y del Web, seguir aprendiendo y poner en pratica mis conocimientos.</p>
-                    
-                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologias de forma autodidacta.</p>
+                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologias de forma autodidacta. Me considero una persona eficiente y atenta los detalles.</p>
 
                 </div>
         </section>   <!-- fin personal -->
@@ -105,9 +98,11 @@
                 <div class="tag">Illustrator</div>
                 <div class="tag">Indesing</div>
                 <div class="tag">HTLM &amp; CSS</div>
-                {# <div class="tag">Git</div> #}
+                <div class="tag">Git</div>
                 <div class="tag">GREP</div>
                 <div class="tag">OCR</div>
+                <div class="tag">Java</div>
+                <div class="tag">C#</div>
                 <div class="tag">Impresión digital</div>
             </div>
         </section> <!-- fin skills -->
