--- a/src/en.njk
+++ b/src/en.njk
@@ -19,7 +19,22 @@
 
 
 
+  <div class="info2">
+    <div class="thiscv">
+      <small>Para la creación de este resumen he usado HTML5 & SASS.
+      <spam><br>
+      Puedes verlo online:
+
+        <a href="https://andfres.github.io/cv/" class="code">
+            https://andfres.github.io/cv/
+        </a>
+
+      </spam>
+      </small>
+    </div>
   </div>
+
+  </div> <!-- box container -->
 
 {% endblock %}
 
