--- a/src/it.njk
+++ b/src/it.njk
@@ -20,25 +20,30 @@
     {% include "./componentes/it/footer.njk" %}
 
 
-    
+  <div class="info2">
     <div class="thiscv">
-      <small>Per la creazione di questo curriculm ho usato:<br> HTML5 & SASS e nunjucks come template engine.
+      <small>Para la creación de este resumen he usado HTML5 & SASS.
       <spam><br>
-      Puoi vederlo online:
+      Puedes verlo online:
 
-          <a href="https://andfres.github.io/cv/" class="code">
-              https://andfres.github.io/cv/
-          </a>
+        <a href="https://andfres.github.io/cv/" class="code">
+            https://andfres.github.io/cv/
+        </a>
+
       </spam>
       </small>
     </div>
+  </div>
+
+  </div> <!-- box container -->
 
 
 
+<!--
     <div class="autorizo">
         <small>Autorizzo il trattamento dei miei dati personali ai sensi del Dlgs 196 del 30 giugno 2003.</small>
     </div>
-
+-->
 
   </div> <!-- end box container -->
 
