--- a/css/info.css
+++ b/css/info.css
@@ -12,6 +12,8 @@
     box-shadow: 2px 2px 1px grey;
     display: inline-block;
     left: 0; }
+    .info2 .thiscv spam {
+      display: none; }
 
 @media print, (min-width: 794px) {
   .info2 {
