--- a/scss/header.scss
+++ b/scss/header.scss
@@ -62,7 +62,7 @@ header {
     & h2 {
         font-size: 19px;
         font-family: Arial, Helvetica, sans-serif;
-
+        text-transform: uppercase;
  
          
         font-size: 100;
