--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@ main {
 
 }
 
+
+
 .job {
     position: relative;
     margin-top: 10px;
@@ -89,7 +91,15 @@ main p, footer p{
     overflow-wrap: break-word;
     font-size: $tam_font;
     line-height: 1.3em;
-    //color: red;
+    //margin-bottom: 5px;
+}
+
+main p{
+  margin-bottom: 6px;
+}
+
+ul{
+  font-size: $tam_font;
 }
 
 
@@ -103,6 +113,7 @@ main p, footer p{
     white-space: nowrap;
     flex-shrink: 0;
     flex-grow: 0;
+    
 }
 
 
