--- a/src/componentes/en/main.njk
+++ b/src/componentes/en/main.njk
@@ -3,7 +3,7 @@
     <!-- row1 -->
     <div class="row1">
         <section class="experiencia section">    
-            <h2 class="titulo-grande" >ESPERIENCIA COÑOOOOOOOOOOOO</h2>
+            <h2 class="titulo-grande" >professional experience</h2>
             
             <article class="job">
                 <div class="logo">
@@ -14,23 +14,20 @@
                     <!-- <h3 class="empresa">ALCAÑIZ FRESNO’S S.A.</h3> -->
                     <div class="info">
                         <p class="fecha">2008 - novembre 2017</p>
-                        <p class="lugar">Valladolid, Spagna</p>
+                        <p class="lugar">Valladolid, Spain</p>
                     </div>
                     <p class="puesto">GRAFICO IMPAGINATORE - ALCAÑIZ FRESNO’S S.A.</p>
                     
                     <div>
-                        <p>Impaginatore specializzato nella creazione di gazzette ufficiali e nella loro edizione elettronica.</p>
+                        <p>Alcañiz Fresno's is a company dedicated to the graphic arts, serving both as a publisher and a printing company.</p>
 
-                        <p>Tester delle risorse tecnologiche,
-                        e creatore di automatismi per <strong>inDesign</strong> attraverso <strong>JavaScript</strong>, che permettono di risparmiare molte ore di lavoro.</p>
+                        <p>My role was that of a layout designer, specialized in the creation of official gazettes and their electronic edition. I have worked in the official bulletins of the Senate, Cortes de Castilla y León, Junta de Castilla y León, among others.</p>
 
-                        <p>Coordinatore del team di lavoro e problem solving.</p>
+                        <p>My role was that of a layout designer, specialized in the creation of official gazettes and their electronic edition. I have worked in the official bulletins of the Senate, Cortes de Castilla y León, Junta de Castilla y León, among others.</p>
                      
-                        <p>Addetto al montaggio dei computer, all'installazione di software e alla creazione di templates e degli stili necessari.</p>
+                        <p>My biggest contribution has been the creation of scripts for inDesign through JavaScript that save many hours of work.</p>
                         
- 
-                        <p>Ho lavorato nei Bollettini Ufficiali del Senato di Spagna, delle Corti di Castiglia e León e della Giunta di Castiglia e León tra altri.</p>
-                        
+
 
                     </div>
                 </div>
