--- a/src/componentes/es/footer.njk
+++ b/src/componentes/es/footer.njk
@@ -23,7 +23,7 @@
             </div>
             
             <div class="curso">
-                <p class="curso-nombre">Corso introdución al desarroyo Web (80h)</p>
+                <p class="curso-nombre">Curso introducción al desarrollo Web (80h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Grow with google</p>
                     <p class="curso-fecha">Noviembre 2018</p>
