--- a/src/componentes/es/main.njk
+++ b/src/componentes/es/main.njk
@@ -19,9 +19,9 @@
                     <p class="puesto">Maquetador - ALCAÑIZ FRESNO’S</p>
                     
                     <div>
-                        <p>Alcañiz Fresno's es una empresa dedicada a las artes graficas, hace la vez de editorial como de imprenta.</p>
+                        <p>Alcañiz Fresno's es una empresa dedicada a las artes gráficas, hace la vez de editorial como de imprenta.</p>
 
-                        <p>Mi puesto era el de maquetador especializado en la creación de boletines oficiales y en su edición electronica. He trabajado en los boletines oficiales del Senado, Cortes de Castilla y León, Junta de Castilla y León entre otros.<p>
+                        <p>Mi puesto era el de maquetador especializado en la creación de boletines oficiales y en su edición electrónica. He trabajado en los boletines oficiales del Senado, Cortes de Castilla y León, Junta de Castilla y León entre otros.<p>
 
 
                         <p>Entre mis funciones estaban las de coordinador del equipo de trabajo con dotes para la resolución de problemas; 
@@ -59,7 +59,7 @@
                     <div>
                         <p>Friul Intagli Industries S.p.A. es la mayor productora de muebles del mundo, su principal cliente es IKEA.</p>
 
-                        <p>Mi labor consistia en la gestión de una máquina ensambladora de puertas de armarios, la carga de material y el control de calidad del producto.</p>
+                        <p>Mi labor consistía en la gestión de una máquina ensambladora de puertas de armarios, la carga de material y el control de calidad del producto.</p>
 
                         <p>Este trabajo me ha permitido desarrollar mis habilidades de trabajo en equipo con personas de diferentes nacionalidades usando el italiano como lengua común.</p>
 
@@ -70,7 +70,7 @@
 {#           lo cual exigia trabajar con gran rapidez y eficacia.
 
       
-            #}
+            1#}
         </section> <!-- fin experiencia -->
         
     </div> <!-- fin row1 -->
@@ -79,12 +79,28 @@
         <section class="personal section">
                 <h2 class="titulo-grande">Sobre mi</h2>
                 <div class="texto">
-                    <p>Hola!, me llamo Andrés, soy un joven español con diez años de experiencia en el sector de las artes graficas. </p>
+                    <p>Hola!, me llamo Andrés, actualmente estoy estudiando un grado superior desarrollo de aplicaciones Web, busco adquirir experiencia laboral
+                      en el sector del desarrollo web o programación que me permita seguir aprendiendo y poner en practica mis conocimientos.</p>
 
-                    <p>Actualmente estoy estudiando un grado superior desarrollo de aplicaciones Web, busco adquirir experiencia laboral
-                      en el sector del desarollo web que me permita seguir aprendiendo y poner en pratica mis conocimientos.</p>
+                    <p>Tengo diez años de experiencia en el sector de las artes gráficas. Mi afición por el diseño me han llevado a la busca de nuevas salidas.</p>
+
                     
-                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologias de forma autodidacta. Me considero una persona eficiente y atenta los detalles.</p>
+                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologías de forma autodidacta. Me considero una persona eficiente y atenta los detalles.</p>
+
+
+
+
+
+
+<!-- 
+                    <p>Hola!, me llamo Andrés, diez años de experiencia en el sector de las artes gráficas. </p>
+                    <p>Actualmente estoy estudiando un grado superior desarrollo de aplicaciones Web, busco adquirir experiencia laboral
+                      en el sector del desarrollo web que me permita seguir aprendiendo y poner en practica mis conocimientos.</p>
+
+                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologías de forma autodidacta. Me considero una persona eficiente y atenta los detalles.</p>
+-->
+
+
 
                 </div>
         </section>   <!-- fin personal -->
@@ -92,7 +108,7 @@
 
         <section class="skills section">
             <h2 class="titulo-grande">HABILIDADES</h2>
-            <p>Tecnologias que controlo:</p>
+            <p>Tecnologías que controlo:</p>
             <div class="tags">
                 <div class="tag">Photoshop</div>
                 <div class="tag">Illustrator</div>
@@ -102,7 +118,7 @@
                 <div class="tag">GREP</div>
                 <div class="tag">OCR</div>
                 <div class="tag">Java</div>
-                <div class="tag">C#</div>
+                <!-- <div class="tag">C#</div> -->
                 <div class="tag">Impresión digital</div>
             </div>
         </section> <!-- fin skills -->
