--- a/src/componentes/es/main.njk
+++ b/src/componentes/es/main.njk
@@ -13,7 +13,7 @@
                 <div class="texto">
                     <!-- <h3 class="empresa">ALCAÑIZ FRESNO’S S.A.</h3> -->
                     <div class="info">
-                        <p class="fecha">2008 - noviembre 2017</p>
+                        <p class="fecha">2008 - Noviembre 2017</p>
                         <p class="lugar">Valladolid, España</p>
                     </div>
                     <p class="puesto">Maquetador - ALCAÑIZ FRESNO’S</p>
@@ -79,20 +79,20 @@
         <section class="personal section">
                 <h2 class="titulo-grande">Sobre mi</h2>
                 <div class="texto">
-                    <p>Hola!, me llamo Andrés, actualmente estoy estudiando un grado superior desarrollo de aplicaciones Web, busco adquirir experiencia laboral
+                    <p>!Hola!, me llamo Andrés, actualmente estoy estudiando un grado superior desarrollo de aplicaciones web, busco adquirir experiencia laboral
                       en el sector del desarrollo web o programación que me permita seguir aprendiendo y poner en practica mis conocimientos.</p>
 
-                    <p>Tengo diez años de experiencia en el sector de las artes gráficas. Mi afición por el diseño me han llevado a la busca de nuevas salidas.</p>
+                    <p>Tengo nueve años de experiencia en el sector de las artes gráficas. Mi afición por el diseño me ha hecho interesarme por el desarrollo web.</p>
 
                     
-                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologías de forma autodidacta. Me considero una persona eficiente y atenta los detalles.</p>
+                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologías de forma autodidacta. </p>
 
 
 
 
 
 
-<!-- 
+<!--  Me considero una persona eficiente y atenta los detalles.
                     <p>Hola!, me llamo Andrés, diez años de experiencia en el sector de las artes gráficas. </p>
                     <p>Actualmente estoy estudiando un grado superior desarrollo de aplicaciones Web, busco adquirir experiencia laboral
                       en el sector del desarrollo web que me permita seguir aprendiendo y poner en practica mis conocimientos.</p>
