--- a/src/componentes/es/main.njk
+++ b/src/componentes/es/main.njk
@@ -3,7 +3,7 @@
     <!-- row1 -->
     <div class="row1">
         <section class="experiencia section">    
-            <h2 class="titulo-grande" >Esperiencia Profesional</h2>
+            <h2 class="titulo-grande" >Experiencia Profesional</h2>
             
             <article class="job">
                 <div class="logo">
@@ -67,10 +67,7 @@
                 </div>
                 </article>
             
-{#           lo cual exigia trabajar con gran rapidez y eficacia.
 
-      
-            1#}
         </section> <!-- fin experiencia -->
         
     </div> <!-- fin row1 -->
@@ -79,11 +76,11 @@
         <section class="personal section">
                 <h2 class="titulo-grande">Sobre mi</h2>
                 <div class="texto">
+                
                     <p>!Hola!, me llamo Andrés, actualmente estoy estudiando un grado superior desarrollo de aplicaciones web, busco adquirir experiencia laboral
                       en el sector del desarrollo web o programación que me permita seguir aprendiendo y poner en practica mis conocimientos.</p>
 
                     <p>Tengo nueve años de experiencia en el sector de las artes gráficas. Mi afición por el diseño me ha hecho interesarme por el desarrollo web.</p>
-
                     
                     <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologías de forma autodidacta. </p>
 
@@ -110,15 +107,15 @@
             <h2 class="titulo-grande">HABILIDADES</h2>
             <p>Tecnologías que controlo:</p>
             <div class="tags">
+                <div class="tag">Java</div>
+                <div class="tag">HTLM &amp; CSS</div>
+                <div class="tag">SQL</div>
+                <div class="tag">Git</div>
                 <div class="tag">Photoshop</div>
                 <div class="tag">Illustrator</div>
                 <div class="tag">Indesing</div>
-                <div class="tag">HTLM &amp; CSS</div>
-                <div class="tag">Git</div>
                 <div class="tag">GREP</div>
                 <div class="tag">OCR</div>
-                <div class="tag">Java</div>
-                <!-- <div class="tag">C#</div> -->
                 <div class="tag">Impresión digital</div>
             </div>
         </section> <!-- fin skills -->
