--- a/src/componentes/es/main.njk
+++ b/src/componentes/es/main.njk
@@ -77,7 +77,7 @@
                 <h2 class="titulo-grande">Sobre mi</h2>
                 <div class="texto">
                 
-                    <p>!Hola!, me llamo Andrés, actualmente estoy estudiando un grado superior desarrollo de aplicaciones web, busco adquirir experiencia laboral
+                    <p>Actualmente estoy estudiando un grado superior desarrollo de aplicaciones web, busco adquirir experiencia laboral
                       en el sector del desarrollo web o programación que me permita seguir aprendiendo y poner en practica mis conocimientos.</p>
 
                     <p>Tengo nueve años de experiencia en el sector de las artes gráficas. Mi afición por el diseño me ha hecho interesarme por el desarrollo web.</p>
