--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -34,7 +34,7 @@
         <div class="box_links">
             <div class="link">
                 <div class="svg"><img src="{{ prefijo }}/img/correo.svg"></div>
-                <p><a href="mailto:javfres@gmail.com">andfres@gmail.com</p>
+                <p><a href="mailto:andfres@gmail.com">andfres@gmail.com</p>
             </div>
 
             <div class="link">
